# 24-2-birthday-reminders

./: CMakeLists.txt  README.md
include/: Person.h  functions.h
src/: CMakeLists.txt  functions.cpp  main.cpp
